--- a/1620 tut1/style.css
+++ b/1620 tut1/style.css
@@ -26,7 +26,7 @@
     width:60%;
     display:inline-block;
     overflow: auto;
-    border-left:3px solid rgb(120,120,120);
+    border-left:3px solid rgba(120,120,120,0.5);
     padding-left:10px;
     margin-left:10px;
 }
@@ -37,8 +37,8 @@
 }
 
 #bigImg {
-    height:100%;
-    /*height:auto;*/
+    /*height:100%;*/
+    height:auto;
     /*Added width parameter to keep the image's width within the alotted space for ctopleft so it doesn't overlap with the contents of ctopright.*/
     width:100%;
 }
